TL-10761 theme: Fix user menu top spacing regression
Reviewed-on: https://review.totaralms.com/13002
Tested-by: Sam Hemelryk <sam.hemelryk@totaralearning.com>

--- a/theme/basis/less/totara/core.less
+++ b/theme/basis/less/totara/core.less
@@ -32,3 +32,16 @@
 .upgradekeyreq {
     margin-bottom: @line-height-computed;
 }
+
+.usermenu {
+    padding-top: ceil(@navbar-padding-vertical * 1.25);
+
+    .userloggedinas & {
+        padding-top: ceil(@navbar-padding-vertical * 0.5);
+    }
+}
+
+// There is a <div> and a <select> with the same class.
+div.langmenu {
+    padding-top: ceil(@navbar-padding-vertical * 1.25);
+}
