--- a/theme/roots/less/totara/core.less
+++ b/theme/roots/less/totara/core.less
@@ -1472,12 +1472,10 @@ ul.dragdrop-keyboard-drag li {
   .langmenu,
   .usermenu {
     display: inline-block;
-    padding: 0;
   }
 
   .usermenu {
     margin-left: @padding-large-horizontal;
-    padding: 0;
   }
 
   .usermenu > .login {
